# obarch

./: CMakeLists.txt  obarch.txt  test.asm  test1.asm
obarch-asm/: CMakeLists.txt  instruction_decode.cpp  instruction_decode.h  main.cpp  typedef.h
obarch-emulator/: CMakeLists.txt  main.cpp  opcodes.h
